<resources>
    <string name="app_name">CityWeb</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="addService">Add Service</string>
    <string name="serviceCode">Service Code</string>
    <string name="submit">Submit</string>
    <string name="isActive">Is Active</string>
    <string name="serviceName">Name</string>
    <string name="serviceDesc">Description</string>
    <string name="cancel">Cancel</string>
    <string name="services">Services</string>
    <string name="plans">Plans</string>
    <string name="profile">Profile</string>
    <string name="query">Complaints</string>
    <string name="feedback">Feedback</string>
    <string name="payment">Payment</string>
    <string name="addAlert">Add Alert</string>
    <string name="newConnection">Get New Connection</string>
    <string name="planDesc">Description</string>
    <string name="planCode">Code</string>
    <string name="planName">Name</string>
    <string name="addPlan">Add Plan</string>
    <string name="taxIncluded">Tax Included</string>
    <string name="planKeyPoint">Key Point</string>
    <string name="planAmount">Amount</string>
    <string name="duration">Duration</string>
    <string name="choosePlan">Choose Plan</string>
    <string name="name">Name</string>
    <string name="mobile">Phone</string>
    <string name="email">Email</string>
    <string name="desc">Description</string>
    <string name="raiseComplaint">New Complaint</string>
    <string name="subject">Subject</string>
    <string name="newComplaint">New Complaint</string>
    <string name="signUp">Sign Up</string>
    <string name="loginId">Login Id</string>
    <string name="signIn">Sign In</string>
    <string name="welcomeStr">Hi , %s</string>
    <string name="userQuery">Query</string>
    <string name="newConn_header_txt">For new connection &amp; best plan.\n Please fill below details, so we can contact you.</string>
    <string name="userType">User Type</string>
    <string name="area">Area/Location</string>
    <string name="comments">Comment</string>
    <string name="done">Done</string>
    <string name="selectAll">Select All</string>
    <string name="message">Message</string>
    <string name="startTime">Start Time</string>
    <string name="endTime">End Time</string>
    <string name="addLocation">Add Location</string>
    <string name="addUser">Add User</string>
    <string name="alertMsg">From %s to %s.</string>
    <string name="planStatus">Plan Status</string>
    <string name="instantRecharge">Instant Recharge</string>
    <string name="assign">Assign</string>
    <string name="userId">User Id</string>
    <string name="user">User</string>
    <string name="close_ticket">Close Complaint</string>
    <string name="enter_ticket_id">Ticket Id</string>
    <string name="addCustomer">Add Customer</string>
    <string name="newConnections">Connections</string>
    <string name="compName">Cityweb Fibernet</string>
    <string name="ceo">CEO : Pankaj Singla  </string>
    <string name="address">2ND FLOOR, H NO-11-C,\n PLOT NO OLD-51-A/1,\n KH NO-82/19,
SUKHBIR NAGAR,\n VILLAGE KARALA,\n North West Delhi,
110081</string>
    <string name="compEmail">support@citywebinternet.com</string>
    <string name="compMobile">8802091792 &amp; 9958038192</string>

</resources>