<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/box_a">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar_service"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/purple_500"
                app:theme="@style/ToolbarTheme"
                app:title="SignUp"
                app:titleTextColor="@color/white" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                app:startIconDrawable="@drawable/ic_user"
                app:startIconTint="@color/purple_500">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/loginId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/userId"
                    android:text="@={model.signUpRequestModelLiveData.loginID}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                app:startIconDrawable="@drawable/ic_baseline_lock_24"
                app:startIconTint="@color/purple_500">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:text="@={model.signUpRequestModelLiveData.password}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                app:startIconDrawable="@drawable/ic_user"
                app:startIconTint="@color/purple_500">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/user"
                    android:text="@={model.signUpRequestModelLiveData.userName}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                app:startIconDrawable="@drawable/ic_baseline_local_phone_24"
                app:startIconTint="@color/purple_500">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/mobileNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/mobile"
                    android:maxLength="10"
                    android:inputType="phone"
                    android:text="@={model.signUpRequestModelLiveData.mobileNo}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                app:startIconDrawable="@drawable/ic_baseline_email_24"
                app:startIconTint="@color/purple_500">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:text="@={model.signUpRequestModelLiveData.emailID}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                app:startIconDrawable="@drawable/ic_baseline_email_24"
                app:startIconTint="@color/purple_500">

                <AutoCompleteTextView
                    android:id="@+id/userType"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/userType"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>


            <LinearLayout
                android:id="@+id/planSelectionView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp"
                android:visibility="gone">

                <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                    android:id="@+id/floatingActionButton2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="16dp"
                    android:clickable="true"
                    android:contentDescription="@string/addService"
                    android:onClick="@{(v)->handler.choosePlan(v)}"
                    android:text="@string/choosePlan"
                    android:textColor="@color/white"
                    android:visibility="@{arePlanLoaded ? View.VISIBLE:View.GONE}"
                    app:backgroundTint="@color/purple_500"
                    app:icon="@drawable/ic_baseline_add_24"
                    app:iconTint="@color/white"
                    app:layout_constraintBottom_toTopOf="@+id/textInputLayout4"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textInputLayout3" />

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/chipGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="24dp"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="@+id/floatingActionButton2"
                    app:layout_constraintEnd_toStartOf="@+id/floatingActionButton2"
                    app:layout_constraintTop_toTopOf="@+id/floatingActionButton2">

                    <com.google.android.material.chip.Chip
                        android:id="@+id/planName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </com.google.android.material.chip.ChipGroup>
            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                app:startIconDrawable="@drawable/ic_baseline_location_on_24"
                app:startIconTint="@color/purple_500">

                <AutoCompleteTextView
                    android:id="@+id/area"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/area"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/cancelSignUp"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_weight=".5"
                    android:onClick="@{(v)->handler.onClick(v)}"
                    android:text="@string/cancel"
                    android:textColor="@color/red" />

                <Button
                    android:id="@+id/submitSignUp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_weight=".5"
                    android:enabled="false"
                    android:onClick="@{(v)->handler.onClick(v)}"
                    android:text="@string/submit" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <data class="SignUpBinding">

        <import type="com.netfix.util.AppConst"/>
        <variable
            name="reqModel"
            type="com.netfix.models.network.request.connection.ConnectionRequestModel" />


        <import type="android.view.View" />

        <variable
            name="arePlanLoaded"
            type="Boolean" />

        <variable
            name="handler"
            type="com.netfix.ui.signup.SignUpFragment.EventHandler" />

        <variable
            name="model"
            type="com.netfix.ui.signup.SignUpViewModel" />
    </data>
</layout>
